# cmusphinx

cmuclmtk/: Makefile.am  cmuclmtk.sln  configure.ac
cmuclmtk/src/libs/: Makefile.am  ac_lmfunc_impl.c  ac_lmfunc_impl.h  rr_fopen.c  rr_mkdtemp.c
cmuclmtk/src/programs/: Makefile.am  evallm.c  text2idngram.c  text2wngram.c  wngram2idngram.c
cmuclmtk/src/win32/: compat.h
cmuclmtk/test/: test.sh
cmuclmtk/win32/: SLM.vcxproj  SLM.vcxproj.filters  binlm2arpa.vcxproj  binlm2arpa.vcxproj.filters  evallm.vcxproj  evallm.vcxproj.filters  idngram2lm.vcxproj  idngram2lm.vcxproj.filters  idngram2stats.vcxproj  idngram2stats.vcxproj.filters  interpolate.vcxproj  interpolate.vcxproj.filters  mergeidngram.vcxproj  mergeidngram.vcxproj.filters  ngram2mgram.vcxproj  ngram2mgram.vcxproj.filters  text2idngram.vcxproj  text2idngram.vcxproj.filters  text2wfreq.vcxproj  text2wfreq.vcxproj.filters  text2wngram.vcxproj  text2wngram.vcxproj.filters  wfreq2vocab.vcxproj  wfreq2vocab.vcxproj.filters  wngram2idngram.vcxproj  wngram2idngram.vcxproj.filters
fst/: .classpath  (+4 more)
multisphinx/: .autotools  .bzrignore  .cproject  .project  .pydevproject  Makefile.am  README  TODO.txt  VERSION  configure.in  multisphinx.pc.in
multisphinx/doc/: Makefile.am
multisphinx/fe/: Makefile.am
multisphinx/feat/: Makefile.am
multisphinx/include/: Makefile.am  cmdln_macro.h  config.h.in  pocketsphinx.h
multisphinx/include/multisphinx/: Makefile.am  acmod.h  arc_buffer.h  bin_mdef.h  bptbl.h  dict2pid.h  featbuf.h  fwdflat_search.h  fwdtree_search.h  latgen_search.h  ngram_trie.h  ps_search.h  state_align_search.h  vocab_mapper.h
multisphinx/include/sphinxbase/: Makefile.am  err.h  fe.h  garray.h  gq.h  huff_code.h  pio.h  ring_queue.h  sbthread.h  sync_array.h
multisphinx/lm/: lm3g_model.h  ngram_model_arpa.h  ngram_model_set.h  plan.txt
multisphinx/multisphinx/: Makefile.am  alignment.c  alignment.h  arc_buffer.c  arc_buffer.h  bptbl.c  bptbl.h  cmdln_macro.h  config.h.in  dict.c  dict.h  dict2pid.c  featbuf.c  fwdflat_search.c  fwdflat_search.h  fwdtree_search.c  fwdtree_search.h  hmm.h  latgen_search.c  latgen_search.h  ms_gauden.c  ms_gauden.h  ms_mgau.c  ms_mgau.h  ms_senone.c  ngram_trie.c  ngram_trie.h  nodeid_map.h  pocketsphinx.c  pocketsphinx.h  pocketsphinx_internal.h  ps_lattice.c  ps_lattice_internal.h  ps_search.c  s2_semi_mgau.h  search.c  search.h  search_factory.c  search_factory.h  search_internal.h  (+8 more)
multisphinx/programs/: Makefile.am  multisphinx_align.c  multisphinx_batch.c  multisphinx_map_vocab.c  multisphinx_merge_lmclasses.c  sphinx_fe.c
multisphinx/python/: Makefile.am  setup.py  setup.py.in  sphinxbase.c  sphinxbase.pxd
multisphinx/sphinxbase/: Makefile.am  ad.h  byteorder.h  cmd_ln.c  cmd_ln.h  config.h.in  err.h  feat.c  feat.h  fsg_model.c  fsg_model.h  ngram_model.h  ngram_model_arpa.c  prim_type.h  sbthread.c  sbthread.h  sync_array.c
multisphinx/src/: Makefile.am
multisphinx/src/libpocketsphinx/: Makefile.am  acmod.c  acmod.h  acmod2.c  acmod2.h  arc_buffer.c  arc_buffer.h  bptbl.c  bptbl.h  dict.c  featbuf.c  featbuf.h  fsg_search.c  fsg_search_internal.h  full-gc-results.txt  fwdflat_search.c  fwdflat_search.h  fwdtree_search.c  fwdtree_search.h  gc-results.txt  hmm.c  hmm.h  ideas.txt  latgen_search.c  latgen_search.h  mdef.h  ms_gauden.c  ms_gauden.h  ms_lattice.c  ms_lattice.h  ms_lattice_todo.txt  ms_mgau.c  ms_mgau.h  ms_senone.h  ngram_search.c  ngram_search.h  ngram_search_fwdflat.c  ngram_search_fwdflat.h  ngram_search_fwdtree.c  ngram_search_fwdtree.h  (+24 more)
multisphinx/src/libsphinxbase/: Makefile.am
multisphinx/src/libsphinxbase/fe/: fe_warp.h  make_log_table.py
multisphinx/src/libsphinxbase/lm/: Makefile.am  lm3g_model.c  lm3g_templates.c  ngram_model.c  ngram_model_dmp.c  ngram_model_dmp32.c  ngram_model_set.c  ngram_model_set.h
multisphinx/src/libsphinxbase/util/: Makefile.am  err.c  garray.c  garray_internal.h  gq.c  huff_code.c  sbthread.c  sync_array.c
multisphinx/src/programs/: Makefile.am  batch.c  map_vocab.c  multisphinx_batch.c  multisphinx_merge_lmclasses.c  ngram_homos.c  pocketsphinx_batch.c  pocketsphinx_map_vocab.c
multisphinx/swig/: Makefile  Makefile.am  acmod.i  arc_buffer.i  bar.py  bptbl.i  cmd_ln.i  common.i  dict.i  dict2pid.i  featbuf.i  foo.py  hufftest2.py  logmath.i  mdef.i  multisphinx.i  multisphinx_wrap.c  ngram_model.i  ngram_trie.i  pocketsphinx.i  pocketsphinx_java.i  pocketsphinx_python.i  pocketsphinx_wrap.c  ps_search.i  search.i  search_factory.i  setup.py  state_align.i  test_dict.py  vocab_map.i
multisphinx/test/: Makefile.am  test_arc_buffer.c  test_bptbl.c  test_fwdtree.c  test_fwdtree_fwdflat.c  test_fwdtree_fwdflat_homos.c  test_latgen.c  test_nodeid_map.c  test_partial_results.c  test_search_factory.c  test_state_align.c
multisphinx/test/data/: 050c0103.mfc  050c0103.slf  050c0301.mfc  bn10000.dic  bn10000.homos  bn10000.homos.dic  chan3.ctl  chan3.mfc  chan3_2.ctl  i960711p.lsn  i960711p.raw
multisphinx/test/old/: Makefile.am
multisphinx/test/old/test_acmod/: Makefile.am  test_acmod.c
multisphinx/test/old/test_fe/: Makefile.am
multisphinx/test/old/test_hash/: Makefile.am
multisphinx/test/old/test_ngram/: Makefile.am
multisphinx/test/old/test_string/: Makefile.am
multisphinx/test/old/test_thread/: Makefile.am
multisphinx/test/old/test_util/: Makefile.am  test_gq.c
multisphinx/test/old/test_vocab_map/: Makefile.am  test_vocab_map.c
multisphinx/test/unit/: Makefile.am
multisphinx/test/unit/test_acmod/: Makefile.am  test_acmod.c  test_featbuf.c  test_sync_array.c
multisphinx/test/unit/test_alloc/: Makefile.am
multisphinx/test/unit/test_bitvec/: Makefile.am
multisphinx/test/unit/test_case/: Makefile.am
multisphinx/test/unit/test_cmdln/: Makefile.am
multisphinx/test/unit/test_fe/: Makefile.am
multisphinx/test/unit/test_feat/: Makefile.am
multisphinx/test/unit/test_fsg/: Makefile.am
multisphinx/test/unit/test_lattice/: Makefile.am  test_build_lattice.c  test_forward_backward.c  test_htk_lattice.c  test_nodeid_map.c  (+1 more)
multisphinx/util/: huff_code.c  pio.c  sync_array.c
(+83 files in other folders)
