AC_INIT(multisphinx, 0.8)
AC_CONFIG_HEADERS([sphinxbase/config.h sphinxbase/sphinx_config.h])
AM_INIT_AUTOMAKE([no-define])
AC_CONFIG_MACRO_DIR([m4])

CFLAGS=${CFLAGS:--g -O2 -Wall}

AC_CANONICAL_HOST
AC_PROG_CC
AM_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC
AC_C_BIGENDIAN
AC_CHECK_TYPES(long long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_FUNCS([popen perror snprintf])
AC_CHECK_FUNCS(dup2)
AC_CHECK_LIB(m, log)
AC_CHECK_HEADERS([errno.h pthread.h])
AC_CHECK_LIB(pthread, pthread_create)
AM_ICONV

dnl
dnl Check for pkgconfig
dnl
AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)

dnl
dnl Enable debugging
dnl
AC_ARG_ENABLE(debug,
	AS_HELP_STRING([--enable-debug],
			[Enable debugging output]),
	AC_DEFINE(SPHINX_DEBUG, [],
	          [Enable debugging output]))

AC_OUTPUT([
multisphinx.pc
Makefile
sphinxbase/Makefile
multisphinx/Makefile
programs/Makefile
swig/Makefile
doc/Makefile
doc/doxyfile
test/Makefile
test/unit/Makefile
test/unit/testfuncs.sh
test/unit/test_case/Makefile
test/unit/test_cmdln/Makefile
test/unit/test_bitvec/Makefile
test/unit/test_fsg/Makefile
test/unit/test_thread/Makefile
test/unit/test_alloc/Makefile
test/unit/test_ngram/Makefile
test/unit/test_feat/Makefile
test/unit/test_hash/Makefile
test/unit/test_string/Makefile
test/unit/test_fe/Makefile
test/unit/test_util/Makefile
test/unit/test_logmath/Makefile
test/unit/test_search/Makefile
test/unit/test_lattice/Makefile
test/unit/test_vocab_map/Makefile
test/unit/test_acmod/Makefile
])
