bin_PROGRAMS = \
	multisphinx_batch \
	multisphinx_map_vocab \
	multisphinx_merge_lmclasses \
	sphinx_cepview \
	sphinx_fe \
	sphinx_jsgf2fsg \
	sphinx_lm_convert \
	sphinx_lm_eval \
	sphinx_pitch

bin_SCRIPTS = \
	sphinx_fsg2dot \
	sphinx_lm_sort

noinst_HEADERS = sphinx_wave2feat.h

LDADD = $(top_builddir)/libmultisphinx.la
INCLUDES = -I$(top_srcdir)
