noinst_LTLIBRARIES = libsphinxbase.la
libsphinxbase_la_SOURCES = agc.c		\
	bio.c					\
	bitvec.c				\
	case.c					\
	ckd_alloc.c				\
	cmd_ln.c				\
	cmn.c					\
	cmn_prior.c				\
	dtoa.c					\
	err.c					\
	feat.c					\
	fe_interface.c				\
	fe_sigproc.c				\
	fe_warp_affine.c			\
	fe_warp.c				\
	fe_warp_inverse_linear.c		\
	fe_warp_piecewise_linear.c		\
	filename.c				\
	fixlog.c				\
	fsg_model.c				\
	garray.c				\
	genrand.c				\
	glist.c					\
	gq.c					\
	hash_table.c				\
	heap.c					\
	huff_code.c				\
	info.c					\
	jsgf.c					\
	jsgf_parser.c				\
	jsgf_scanner.c				\
	lda.c					\
	listelem_alloc.c			\
	lm3g_model.c				\
	logmath.c				\
	mmio.c					\
	ngram_model_arpa.c			\
	ngram_model.c				\
	ngram_model_dmp32.c			\
	ngram_model_dmp.c			\
	ngram_model_set.c			\
	pio.c					\
	profile.c				\
	sbthread.c				\
	strfuncs.c				\
	sync_array.c				\
	utf8.c					\
	yin.c

# Need this to avoid pulling in system includes by accident
INCLUDES = -I$(top_srcdir)
