noinst_LTLIBRARIES = libsphinxbase.la
libsphinxbase_la_SOURCES = agc.c		\
	bio.c					\
	bitvec.c				\
	case.c					\
	ckd_alloc.c				\
	cmd_ln.c				\
	cmn.c					\
	cmn_prior.c				\
	dtoa.c					\
	err.c					\
	feat.c					\
	fe_interface.c				\
	fe_sigproc.c				\
	fe_warp_affine.c			\
	fe_warp.c				\
	fe_warp_inverse_linear.c		\
	fe_warp_piecewise_linear.c		\
	filename.c				\
	fixlog.c				\
	fsg_model.c				\
	garray.c				\
	genrand.c				\
	glist.c					\
	gq.c					\
	hash_table.c				\
	heap.c					\
	huff_code.c				\
	info.c					\
	jsgf.c					\
	jsgf_parser.c				\
	jsgf_scanner.c				\
	lda.c					\
	listelem_alloc.c			\
	lm3g_model.c				\
	logmath.c				\
	mmio.c					\
	ngram_model_arpa.c			\
	ngram_model.c				\
	ngram_model_dmp32.c			\
	ngram_model_dmp.c			\
	ngram_model_set.c			\
	pio.c					\
	profile.c				\
	sbthread.c				\
	strfuncs.c				\
	sync_array.c				\
	utf8.c					\
	yin.c

sbincludedir = ${includedir}/sphinxbase

sbinclude_HEADERS = \
	ad.h					\
	agc.h					\
	bio.h					\
	bitvec.h				\
	byteorder.h				\
	case.h					\
	ckd_alloc.h				\
	cmd_ln.h				\
	cmn.h					\
	cont_ad.h				\
	err.h					\
	f2c.h					\
	fe.h					\
	fe_internal.h				\
	fe_warp.h				\
	fe_warp_affine.h			\
	fe_warp_inverse_linear.h		\
	fe_warp_piecewise_linear.h		\
	feat.h					\
	filename.h				\
	fixpoint.h				\
	fsg_model.h				\
	garray.h				\
	garray_internal.h			\
	genrand.h				\
	glist.h					\
	gq.h					\
	hash_table.h				\
	heap.h					\
	huff_code.h				\
	info.h					\
	jsgf.h					\
	jsgf_internal.h				\
	jsgf_parser.h				\
	jsgf_scanner.h				\
	libutil.h				\
	listelem_alloc.h			\
	lm3g_model.h				\
	logmath.h				\
	mmio.h					\
	ngram_model.h				\
	ngram_model_arpa.h			\
	ngram_model_dmp.h			\
	ngram_model_internal.h			\
	ngram_model_set.h			\
	pio.h					\
	prim_type.h				\
	profile.h				\
	ring_queue.h				\
	sbthread.h				\
	sphinx_config.h				\
	sphinxbase_export.h			\
	strfuncs.h				\
	sync_array.h				\
	unlimit.h				\
	yin.h

# Need this to avoid pulling in system includes by accident
INCLUDES = -I$(top_srcdir)
