multisphinxincludedir = $(includedir)/multisphinx

multisphinxinclude_HEADERS =			\
	acmod.h					\
	arc_buffer.h				\
	bin_mdef.h				\
	bptbl.h					\
	dict2pid.h				\
	dict.h					\
	featbuf.h				\
	fwdflat_search.h			\
	fwdtree_search.h			\
	latgen_search.h				\
	ngram_trie.h				\
	ps_alignment.h				\
	ps_search.h				\
	s3types.h				\
	state_align_search.h			\
	vocab_map.h
